A few assorted alignment fixes

--- a/inject.css
+++ b/inject.css
@@ -54,9 +54,9 @@ div.ChatMessageBlock div.OpenGraphFooter:hover span.OpenGraphMessageURL_short { 
 div.ChatMessageBlock div.OpenGraphFooter:hover input.OpenGraphMessageURL_full { opacity: 1 !important; transform: none !important; }
 
 /* Compact chat input area */
-div.smallChatFont.compactView textarea.chatTextarea { height: 24px; padding: 3px; }
+div.smallChatFont.compactView textarea.chatTextarea { height: 24px; padding: 3px; overflow: hidden; white-space: nowrap; }
 div.chatWindow div.chatEntry.compactView { padding: 4px 8px !important; height: 24px !important; }
-div.chatEntry.compactView > * { height: 24px; }
+div.chatEntry.compactView > * { height: 24px !important; }
 div.chatEntry.compactView button.VoiceToggle { height: 20px; width: 20px; min-width: 20px; }
 div.chatEntry.compactView div.VoiceToggleIconCtn { left: 3px; top: 5px; height: 18px; width: 18px; }
 div.chatEntry.compactView div.VoiceToggleIconCtn > svg { width: 75% !important; height: 75% !important; }
@@ -77,7 +77,7 @@ div.chatRoomButton { margin: 0px 2px !important; height: 24px !important; width:
 div.statMemberStat { margin-right: 4px !important; }
 div.chatRoomGroupHeader div.broadcastInfoContainer { margin-right: 0px; padding: 4px; }
 div.chatRoomGroupHeader div.broadcastInfoContainer div.broadcastDetails { padding-right: 0px; display: flex; flex-direction: row; }
-div.chatRoomGroupHeader div.broadcastInfoContainer div.broadcastDetails div.nowWatching { max-height: 16px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 120px; }
+div.chatRoomGroupHeader div.broadcastInfoContainer div.broadcastDetails div.nowWatching { max-height: 16px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 84px; }
 div.chatRoomGroupHeader div.broadcastInfoContainer div.broadcastDetails div.gameTitle { font-size: 12px; text-align: left; padding-left: 4px; max-width: 128px; max-height: 16px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
 div.chatRoomGroupHeader div.broadcastInfoContainer div.broadcastDetails div.broadcastTitle { font-size: 12px; max-height: 16px; }
 div.chatRoomGroupHeader div.broadcastInfoContainer div.thumbnail { display: none !important; }
@@ -126,10 +126,13 @@ div.ChatMsgSlashEmote div.speakerHoverArea { line-height: 15px; }
 div.ChatMsgSlashEmote div.speaker div.speakerStatus { height: 15px; }
 div.BBCodeYouTubeComponent { margin: 0px; }
 div.msg div.ChatMessageOpenGraph { margin: 4px 0px; }
-img.emoticon { width: 15px !important; height: 15px !important; vertical-align: bottom !important; }
+img.emoticon { vertical-align: bottom !important; }
 div.NonInlinedEmbed a div.NonInlinedEmbedLogo { height: 15px; margin-top: 0px; margin-bottom: -4px; }
+div.NonInlinedEmbed svg.SVGIcon_Hyperlink { width: 15px !important; height: 15px !important; margin-top: 0px !important; margin-bottom: -4px !important; }
+div.NonInlinedEmbed svg.SVGIcon_Hyperlink { height: 11px !important; }
 
 /* Compact friends list */
+div.compactView div.titleBarContainer div.currentUserContainer div.richPresenceLabel { line-height: 14px; padding-top: 2px; padding-bottom: 2px; margin-top: 0px; }
 div.friendlistListContainer { margin-top: 0px; border-top: none; }
 div.CompactFriendsList div.friendsContainer { padding-bottom: 0px; }
 div.CompactFriendsList div.friend.ingame div.labelHolder { padding-top: 0px; padding-bottom: 0px; }
